Updating kustomization.yaml

--- a/k3s-ansible-gitops/gitops/kustomization.yaml
+++ b/k3s-ansible-gitops/gitops/kustomization.yaml
@@ -1,11 +1,20 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 resources:
-  - flux-system/gotk-components.yaml
-  - infrastructure/helmrepos.yaml
-  - infrastructure/traefik/helmrelease.yaml
-  - infrastructure/metal-lb/helmrelease.yaml
-  - infrastructure/longhorn/helmrelease.yaml
-  - infrastructure/jetstack-helmrepo.yaml
-  - monitoring/prometheus/helmrepo.yaml
-  - monitoring/prometheus/helmrelease.yaml
-  - monitoring/grafana/deployment.yaml
-  - apps/jellyfin/kustomization.yaml
+# Flux components
+- flux-system/gotk-components.yaml
+
+# Infrastructure
+- infrastructure/helmrepos.yaml
+- infrastructure/traefik/helmrelease.yaml
+- infrastructure/metal-lb/helmrelease.yaml
+- infrastructure/longhorn/helmrelease.yaml
+- infrastructure/jetstack-helmrepo.yaml
+
+# Monitoring
+- monitoring/prometheus/helmrepo.yaml
+- monitoring/prometheus/helmrelease.yaml
+- monitoring/grafana/deployment.yaml
+
+# Apps
+- apps/jellyfin # <-- point to folder, not the kustomization.yaml file
