--- a/k3s-ansible-gitops/gitops/kustomization.yaml
+++ b/k3s-ansible-gitops/gitops/kustomization.yaml
@@ -2,7 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 # Flux components
-- flux-system-crds
+#- flux-system-crds
 - flux-system/gotk-components.yaml
 
 # Infrastructure
