--- a/k3s-ansible-gitops/gitops/infrastructure/kustomization.yaml
+++ b/k3s-ansible-gitops/gitops/infrastructure/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- longhorn/namespace.yaml
 - helmrepos.yaml
 - traefik/helmrelease.yaml
 - metal-lb/helmrelease.yaml
