--- a/k3s-ansible-gitops/gitops/infrastructure/kustomization.yaml
+++ b/k3s-ansible-gitops/gitops/infrastructure/kustomization.yaml
@@ -7,3 +7,5 @@ resources:
 - metal-lb/helmrelease.yaml
 - longhorn/helmrelease.yaml
 - jetstack-helmrepo.yaml
+- reflector/helmrelease.yaml
+- reflector/helmrepo.yaml
