--- a/k3s-ansible-gitops/gitops/infrastructure/reflector/helmrelease.yaml
+++ b/k3s-ansible-gitops/gitops/infrastructure/reflector/helmrelease.yaml
@@ -2,7 +2,7 @@ apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
   name: reflector
-  namespace: kubernetes-reflector
+  namespace: default
 spec:
   interval: 5m
   chart:
