--- a/k3s-ansible-gitops/gitops/infrastructure/reflector/helmrelease.yaml
+++ b/k3s-ansible-gitops/gitops/infrastructure/reflector/helmrelease.yaml
@@ -8,13 +8,12 @@ spec:
   chart:
     spec:
       chart: reflector
-      version: 7.x.x
+      version: 9.1.45
       sourceRef:
         kind: HelmRepository
         name: emberstack
         namespace: flux-system
   install:
-    createNamespace: true
   values:
     replicaCount: 1
     image:
