--- a/k3s-ansible-gitops/gitops/infrastructure/reflector/helmrelease.yaml
+++ b/k3s-ansible-gitops/gitops/infrastructure/reflector/helmrelease.yaml
@@ -1,26 +1,60 @@
-apiVersion: helm.toolkit.fluxcd.io/v2
-kind: HelmRelease
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: kubernetes-reflector
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
 metadata:
   name: reflector
-  namespace: default
+rules:
+- apiGroups: [ "" ]
+  resources: [ "secrets", "configmaps" ]
+  verbs: [ "get", "list", "watch", "create", "update", "patch" ]
+- apiGroups: [ "" ]
+  resources: [ "events" ]
+  verbs: [ "create", "patch" ]
+---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: reflector
+  namespace: kubernetes-reflector
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: reflector
+roleRef:
+  apiGroup: rbac.authorization.k8s.io
+  kind: ClusterRole
+  name: reflector
+subjects:
+- kind: ServiceAccount
+  name: reflector
+  namespace: kubernetes-reflector
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: reflector
+  namespace: kubernetes-reflector
 spec:
-  interval: 5m
-  chart:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: reflector
+  template:
+    metadata:
+      labels:
+        app: reflector
     spec:
-      chart: reflector
-      version: 9.1.45
-      sourceRef:
-        kind: HelmRepository
-        name: emberstack
-        namespace: flux-system
-  install:
-  values:
-    replicaCount: 1
-    image:
-      pullPolicy: IfNotPresent
-
-    # Default reflector behavior
-    configuration:
-      clusterDomain: cluster.local
-      enableCredentialsSync: true
-      enableTLS: true
+      serviceAccountName: reflector
+      containers:
+      - name: reflector
+        image: emberstack/kubernetes-reflector:9.1.45
+        imagePullPolicy: IfNotPresent
+        args:
+        - "--enable-credentials-sync=true"
+        - "--enable-tls=true"
+        - "--cluster-domain=cluster.local"
