--- a/k3s-ansible-gitops/gitops/flux-system/kustomization.yaml
+++ b/k3s-ansible-gitops/gitops/flux-system/kustomization.yaml
@@ -3,3 +3,8 @@ kind: Kustomization
 resources:
 - gotk-components.yaml
 - gotk-sync.yaml
+spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
