--- a/k3s-ansible-gitops/gitops/kustomization.yaml
+++ b/k3s-ansible-gitops/gitops/kustomization.yaml
@@ -2,14 +2,17 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
 # Flux components
-#- flux-system-crds
 - flux-system/gotk-components.yaml
 
 # Infrastructure
 - infrastructure
+- infrastructure/cert-manager
 
 # Monitoring
 - monitoring
 
 # Apps
 - apps/jellyfin # <-- point to folder, not the kustomization.yaml file
+
+# Secrets
+- secrets
