split cert-manager and resources

--- a/k3s-ansible-gitops/gitops/kustomization.yaml
+++ b/k3s-ansible-gitops/gitops/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 # Infrastructure
 - infrastructure
 - infrastructure/cert-manager
+- infrastructure/cert-manager-resources
 
 # Monitoring
 - monitoring
