cert-manager kustomization edit

--- a/k3s-ansible-gitops/gitops/infrastructure/cert-manager/kustomization.yaml
+++ b/k3s-ansible-gitops/gitops/infrastructure/cert-manager/kustomization.yaml
@@ -3,6 +3,4 @@ kind: Kustomization
 resources:
 - helmrepo.yaml
 - helmrelease.yaml
-- clusterissuer-staging.yaml
-- clusterissuer-production.yaml
-- wildcard-certificate.yaml
+- namespace.yaml
