--- a/k3s-ansible-gitops/gitops/flux-system/kustomization.yaml
+++ b/k3s-ansible-gitops/gitops/flux-system/kustomization.yaml
@@ -3,6 +3,8 @@ kind: Kustomization
 resources:
 - gotk-components.yaml
 - gotk-sync.yaml
+- kustomization-cert-manager.yaml
+- kustomization-cert-manager-resources.yaml
 spec:
   decryption:
     provider: sops
