--- a/k3s-ansible-gitops/gitops/flux-system/kustomization-cert-manager-res.yaml
+++ b/k3s-ansible-gitops/gitops/flux-system/kustomization-cert-manager-res.yaml
@@ -7,6 +7,7 @@ spec:
   interval: 1m
   path: ./infrastructure/cert-manager-resources
   prune: true
+  wait: true
   sourceRef:
     kind: GitRepository
     name: flux-system
