--- a/k3s-ansible-gitops/gitops/flux-system-crds/kustomization.yaml
+++ b/k3s-ansible-gitops/gitops/flux-system-crds/kustomization.yaml
@@ -1,4 +1,4 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- https://github.com/fluxcd/helm-controller/releases/latest/download/helm-controller.crds.yaml
+- cert-manager-crds.yaml
