Fix chart ref cert-manager helmrelease

--- a/k3s-ansible-gitops/gitops/infrastructure/cert-manager/helmrelease.yaml
+++ b/k3s-ansible-gitops/gitops/infrastructure/cert-manager/helmrelease.yaml
@@ -5,6 +5,13 @@ metadata:
   namespace: cert-manager
 spec:
   interval: 1m
+  chart:
+    spec:
+      chart: cert-manager
+      sourceRef:
+        kind: HelmRepository
+        name: jetstack
+        namespace: flux-system
   install:
     remediation:
       retries: -1
