--- a/k3s-ansible-gitops/gitops/infrastructure/cert-manager-resources/clusterissuer-staging.yaml
+++ b/k3s-ansible-gitops/gitops/infrastructure/cert-manager-resources/clusterissuer-staging.yaml
@@ -14,3 +14,7 @@ spec:
           apiTokenSecretRef:
             name: cloudflare-api-token-secret
             key: api-token
+    dependsOn:
+    - name: cert-manager
+      namespace: cert-manager
+    wait: true
