--- a/k3s-ansible-gitops/gitops/infrastructure/cert-manager-resources/wildcard-certificate.yaml
+++ b/k3s-ansible-gitops/gitops/infrastructure/cert-manager-resources/wildcard-certificate.yaml
@@ -14,3 +14,7 @@ spec:
   dnsNames:
   - local.ckcjsellers.com
   - "*.local.ckcjsellers.com"
+  dependsOn:
+  - name: cert-manager
+    namespace: cert-manager
+  wait: true
