--- a/k3s-ansible-gitops/gitops/infrastructure/cert-manager-resources/clusterissuer-staging.yaml
+++ b/k3s-ansible-gitops/gitops/infrastructure/cert-manager-resources/clusterissuer-staging.yaml
@@ -8,7 +8,8 @@ spec:
     email:
     privateKeySecretRef:
       name: letsencrypt-staging
-    solvers:
+    solvers: cloudeflare-email
+    key: email
     - dns01:
         cloudflare:
           apiTokenSecretRef:
