--- a/k3s-ansible-gitops/gitops/infrastructure/cert-manager-resources/clusterissuer-staging.yaml
+++ b/k3s-ansible-gitops/gitops/infrastructure/cert-manager-resources/clusterissuer-staging.yaml
@@ -13,4 +13,4 @@ spec:
         cloudflare:
           apiTokenSecretRef:
             name: cloudflare-secret
-            key: api-token
+            key: apiKey
