--- a/k3s-ansible-gitops/.gitignore
+++ b/k3s-ansible-gitops/.gitignore
@@ -1,2 +1,1 @@
-./media-expansion/k3s-ansible-gitops/gitops/secrets/cert-manager.yaml
-./media-expansion/k3s-ansible-gitops/.gitignore
+media-expansion/k3s-ansible-gitops/gitops/secrets/cert-manager.yaml
