--- a/k3s-ansible-gitops/gitops/infrastructure/cert-manager-resources/clusterissuer-staging.yaml
+++ b/k3s-ansible-gitops/gitops/infrastructure/cert-manager-resources/clusterissuer-staging.yaml
@@ -14,3 +14,6 @@ spec:
           apiTokenSecretRef:
             name: cloudflare-secret
             key: apiKey
+    selector:
+      dnsZones:
+      - "ckcjsellers.com"
