--- a/k3s-ansible-gitops/gitops/infrastructure/cert-manager-resources/wildcard-certificate.yaml
+++ b/k3s-ansible-gitops/gitops/infrastructure/cert-manager-resources/wildcard-certificate.yaml
@@ -9,7 +9,7 @@ metadata:
 spec:
   secretName: wildcard-tls
   issuerRef:
-    name: letsencrypt-staging
+    name: letsencrypt-production
     kind: ClusterIssuer
   dnsNames:
   - local.ckcjsellers.com
